--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
   },
   "repository": {
     "type": "git",
@@ -16,7 +17,8 @@
     "eslint": "^8.14.0"
   },
   "dependencies": {
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "jsonwebtoken": "^8.5.1"
   },
   "bugs": {
     "url": "https://github.com/liisaambrosen/projeto-node/issues"
