--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^8.14.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.0",
     "jsonwebtoken": "^8.5.1"
   },
