--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3"
   },
   "bugs": {
     "url": "https://github.com/liisaambrosen/projeto-node/issues"
